Did the assignment

--- a/UnitTestingExercise.Tests/UnitTestingExercise.Tests.csproj
+++ b/UnitTestingExercise.Tests/UnitTestingExercise.Tests.csproj
@@ -18,5 +18,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UnitTestingExercise\UnitTestingExercise.csproj" />
+  </ItemGroup>
 
 </Project>
